[gd_scene load_steps=91 format=2]

[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/death_2.png" type="Texture" id=1]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/hit_0.png" type="Texture" id=2]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/hit_1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/idle_4.png" type="Texture" id=4]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/idle_0.png" type="Texture" id=5]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/idle_2.png" type="Texture" id=6]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/idle_1.png" type="Texture" id=7]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/hit_2.png" type="Texture" id=8]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/death_1.png" type="Texture" id=9]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/idle_3.png" type="Texture" id=10]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/idle_5.png" type="Texture" id=11]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/death_4.png" type="Texture" id=12]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/walk_6.png" type="Texture" id=13]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/death_3.png" type="Texture" id=14]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/death_5.png" type="Texture" id=15]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/death_0.png" type="Texture" id=16]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/walk_7.png" type="Texture" id=17]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/Attack_21.png" type="Texture" id=18]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/Attack_28.png" type="Texture" id=19]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/death_6.png" type="Texture" id=20]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/Attack_13.png" type="Texture" id=21]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/walk_3.png" type="Texture" id=22]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/walk_2.png" type="Texture" id=23]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/walk_1.png" type="Texture" id=24]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/walk_4.png" type="Texture" id=25]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/walk_0.png" type="Texture" id=26]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/walk_5.png" type="Texture" id=27]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=28]
[ext_resource path="res://Assets/GUI/Player/XP/FullXP.png" type="Texture" id=29]
[ext_resource path="res://Assets/GUI/Player/XP/NoXP.png" type="Texture" id=30]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/Attack_31.png" type="Texture" id=31]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/Attack_11.png" type="Texture" id=32]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/Attack_25.png" type="Texture" id=33]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/Attack_9.png" type="Texture" id=34]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/Attack_16.png" type="Texture" id=35]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/Attack_32.png" type="Texture" id=36]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/Attack_22.png" type="Texture" id=37]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/Attack_26.png" type="Texture" id=38]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/Attack_33.png" type="Texture" id=39]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/Attack_27.png" type="Texture" id=40]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/Attack_20.png" type="Texture" id=41]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/Attack_35.png" type="Texture" id=42]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/Attack_17.png" type="Texture" id=43]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/Attack_10.png" type="Texture" id=44]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/Attack_14.png" type="Texture" id=45]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/Attack_30.png" type="Texture" id=46]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/Attack_24.png" type="Texture" id=47]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/Attack_12.png" type="Texture" id=48]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/Attack_15.png" type="Texture" id=49]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/Attack_2.png" type="Texture" id=50]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/Attack_19.png" type="Texture" id=51]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/Attack_29.png" type="Texture" id=52]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/Attack_18.png" type="Texture" id=53]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/Attack_4.png" type="Texture" id=54]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/Attack_6.png" type="Texture" id=55]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/Attack_34.png" type="Texture" id=56]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/Attack_0.png" type="Texture" id=57]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/Attack_8.png" type="Texture" id=58]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/Attack_23.png" type="Texture" id=59]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/Attack_36.png" type="Texture" id=60]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/death_9.png" type="Texture" id=61]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/death_7.png" type="Texture" id=62]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/death_8.png" type="Texture" id=63]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/Attack_5.png" type="Texture" id=64]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/Attack_7.png" type="Texture" id=65]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/Attack_1.png" type="Texture" id=66]
[ext_resource path="res://Assets/Player and Enemies/Player/Full body animated characters/Char 3/with hands/Attack_3.png" type="Texture" id=67]
[ext_resource path="res://Assets/GUI/Player/Health/NoHealth.png" type="Texture" id=68]
[ext_resource path="res://Assets/GUI/Player/Health/FullHealth.png" type="Texture" id=69]
[ext_resource path="res://Assets/GUI/Player/PlayerBar_2.0.png" type="Texture" id=70]
[ext_resource path="res://Assets/Weapeons/Melee Weapons/BeachBall/BeachBall_Red.png" type="Texture" id=71]
[ext_resource path="res://Assets/Weapeons/Melee Weapons/DoubleAxe/DoubleAxe_Tier3.png" type="Texture" id=72]
[ext_resource path="res://Assets/GUI/General Buttons/Shop/ShopLayout/Shop_Layout_3.0.png" type="Texture" id=73]
[ext_resource path="res://Assets/GUI/General Buttons/Shop/ShopBox/Shop_Box_2.0.png" type="Texture" id=74]
[ext_resource path="res://Scripts/ButtonBox_Axe.gd" type="Script" id=75]
[ext_resource path="res://Scripts/ButtonBox_BeachBall.gd" type="Script" id=76]
[ext_resource path="res://Assets/Weapeons/Melee Weapons/Shuriken/Shuriken.png" type="Texture" id=77]
[ext_resource path="res://Scripts/ButtonBox_Shuriken.gd" type="Script" id=78]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 10 ), ExtResource( 4 ), ExtResource( 11 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 24 ), ExtResource( 23 ), ExtResource( 22 ), ExtResource( 25 ), ExtResource( 27 ), ExtResource( 13 ), ExtResource( 17 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 9 ), ExtResource( 1 ), ExtResource( 14 ), ExtResource( 12 ), ExtResource( 15 ), ExtResource( 20 ), ExtResource( 62 ), ExtResource( 63 ), ExtResource( 61 ) ],
"loop": true,
"name": "Death",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 8 ) ],
"loop": true,
"name": "Hit",
"speed": 5.0
}, {
"frames": [ ExtResource( 57 ), ExtResource( 66 ), ExtResource( 50 ), ExtResource( 67 ), ExtResource( 54 ), ExtResource( 64 ), ExtResource( 55 ), ExtResource( 65 ), ExtResource( 58 ), ExtResource( 34 ), ExtResource( 44 ), ExtResource( 32 ), ExtResource( 48 ), ExtResource( 21 ), ExtResource( 45 ), ExtResource( 49 ), ExtResource( 35 ), ExtResource( 43 ), ExtResource( 53 ), ExtResource( 51 ), ExtResource( 41 ), ExtResource( 18 ), ExtResource( 37 ), ExtResource( 59 ), ExtResource( 47 ), ExtResource( 33 ), ExtResource( 38 ), ExtResource( 40 ), ExtResource( 19 ), ExtResource( 52 ), ExtResource( 46 ), ExtResource( 31 ), ExtResource( 36 ), ExtResource( 39 ), ExtResource( 56 ), ExtResource( 42 ), ExtResource( 60 ) ],
"loop": true,
"name": "Attack",
"speed": 85.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 160.0
height = 200.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7, 23.25 )

[sub_resource type="CircleShape2D" id=38]
radius = 360.112

[sub_resource type="DynamicFontData" id=36]
antialiased = false
font_path = "res://Assets/GUI/Fonts/PilotCommand-3zn93.otf"

[sub_resource type="DynamicFont" id=37]
size = 23
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 36 )

[sub_resource type="DynamicFontData" id=32]
antialiased = false
hinting = 0
font_path = "res://Assets/GUI/Fonts/Montserrat-ExtraBold.ttf"

[sub_resource type="DynamicFont" id=33]
size = 24
extra_spacing_char = 1
font_data = SubResource( 32 )

[sub_resource type="DynamicFontData" id=34]
font_path = "res://Assets/GUI/Fonts/Montserrat-ExtraBold.ttf"

[sub_resource type="DynamicFont" id=35]
size = 80
font_data = SubResource( 34 )

[sub_resource type="DynamicFontData" id=30]
antialiased = false
hinting = 0
font_path = "res://Assets/GUI/Fonts/digital-7.ttf"

[sub_resource type="DynamicFont" id=31]
size = 39
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 30 )

[node name="Player" type="KinematicBody2D"]
pause_mode = 2
position = Vector2( 928, 512 )
collision_mask = 4
script = ExtResource( 28 )

[node name="Tools" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.7, 0.7 )
smoothing_speed = 10.0

[node name="Player_Animation" type="AnimatedSprite" parent="."]
position = Vector2( -4.54747e-13, -1.19209e-07 )
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 1 )
animation = "Idle"
frame = 5
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 54 )
scale = Vector2( 0.1, 0.1 )
shape = SubResource( 2 )

[node name="HitArea" type="Area2D" parent="."]
position = Vector2( 0, -1 )
collision_mask = 2

[node name="AreaofDetection" type="CollisionShape2D" parent="HitArea"]
position = Vector2( 30, 57.75 )
shape = SubResource( 3 )
disabled = true

[node name="AreaofDetection" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaofDetection"]
position = Vector2( 0, 14 )
shape = SubResource( 38 )

[node name="Shop" type="Control" parent="."]
visible = false

[node name="BackGround" type="ColorRect" parent="Shop"]
self_modulate = Color( 1, 1, 1, 0.776471 )
margin_left = -450.0
margin_top = -254.0
margin_right = 450.0
margin_bottom = 254.0
color = Color( 0, 0, 0, 1 )

[node name="Shop" type="TextureRect" parent="Shop"]
margin_left = -85.0
margin_top = -133.0
margin_right = 85.0
margin_bottom = -34.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 85, 0 )
texture = ExtResource( 73 )

[node name="ButtonBox_Axe" type="TextureButton" parent="Shop/Shop"]
light_mask = 0
margin_left = 16.0
margin_top = 14.0
margin_right = 54.0
margin_bottom = 79.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 74 )
script = ExtResource( 75 )

[node name="Tool1" type="TextureRect" parent="Shop/Shop/ButtonBox_Axe"]
light_mask = 0
margin_left = 2.0
margin_top = 3.00009
margin_right = 35.0
margin_bottom = 36.0001
rect_scale = Vector2( 0.6, 0.6 )
rect_pivot_offset = Vector2( 16.5, 0 )
texture = ExtResource( 72 )

[node name="TextTool1" type="Label" parent="Shop/Shop/ButtonBox_Axe"]
margin_left = -2.33337
margin_top = 27.0
margin_right = 199.667
margin_bottom = 284.0
rect_scale = Vector2( 0.12, 0.12 )
rect_pivot_offset = Vector2( 10, 0 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 37 )
text = "This tool will spin around you and cut anyone who tries to enter the circle of the axes."
align = 1
valign = 1
autowrap = true

[node name="ButtonBox_BeachBall" type="TextureButton" parent="Shop/Shop"]
margin_left = 66.0
margin_top = 14.0
margin_right = 104.0
margin_bottom = 79.0
rect_pivot_offset = Vector2( 19, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 74 )
script = ExtResource( 76 )

[node name="Tool2" type="TextureRect" parent="Shop/Shop/ButtonBox_BeachBall"]
margin_left = -5.99805
margin_top = 3.66699
margin_right = 1741.0
margin_bottom = 1772.67
rect_scale = Vector2( 0.01, 0.01 )
rect_pivot_offset = Vector2( 16.5, 0 )
texture = ExtResource( 71 )

[node name="TextTool2" type="Label" parent="Shop/Shop/ButtonBox_BeachBall"]
margin_left = -2.0
margin_top = 26.6667
margin_right = 199.0
margin_bottom = 284.0
rect_scale = Vector2( 0.12, 0.12 )
rect_pivot_offset = Vector2( 10, 0 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 37 )
text = "This tool will move around the map bouncing against walls.
"
align = 1
valign = 1
autowrap = true

[node name="ButtonBox_Shuriken" type="TextureButton" parent="Shop/Shop"]
margin_left = 116.0
margin_top = 13.6667
margin_right = 154.0
margin_bottom = 78.6667
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 74 )
script = ExtResource( 78 )

[node name="Tool3" type="TextureRect" parent="Shop/Shop/ButtonBox_Shuriken"]
margin_left = 2.33331
margin_top = 3.33344
margin_right = 35.3333
margin_bottom = 36.3334
rect_scale = Vector2( 0.6, 0.6 )
rect_pivot_offset = Vector2( 16.5, 0 )
texture = ExtResource( 77 )

[node name="TextTool3" type="Label" parent="Shop/Shop/ButtonBox_Shuriken"]
margin_left = -2.0
margin_top = 27.3333
margin_right = 199.0
margin_bottom = 284.666
rect_scale = Vector2( 0.12, 0.12 )
rect_pivot_offset = Vector2( 10, 0 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 37 )
text = "..."
align = 1
valign = 1
autowrap = true

[node name="PlayerBar" type="Control" parent="."]
pause_mode = 2
process_priority = 1
margin_left = 6.0
margin_top = 17.0
margin_right = 6.0
margin_bottom = 17.0
rect_scale = Vector2( 2.5, 2.5 )
rect_pivot_offset = Vector2( 20, 0 )

[node name="HealthBar" type="Control" parent="PlayerBar"]
pause_mode = 2
margin_left = 3.5
margin_top = -24.5
margin_right = 3.5
margin_bottom = -24.5
rect_pivot_offset = Vector2( 20, 0 )

[node name="ProgressBar" type="TextureProgress" parent="PlayerBar/HealthBar"]
margin_left = -141.0
margin_top = -72.5
margin_right = -92.0
margin_bottom = -69.5
value = 100.0
texture_under = ExtResource( 68 )
texture_progress = ExtResource( 69 )
nine_patch_stretch = true

[node name="XPBar" type="Control" parent="PlayerBar"]
pause_mode = 2
margin_left = 30.0
margin_top = 9.0
margin_right = 30.0
margin_bottom = 9.0
rect_pivot_offset = Vector2( 20, 0 )

[node name="ProgressBar" type="TextureProgress" parent="PlayerBar/XPBar"]
margin_left = -167.0
margin_top = -100.5
margin_right = -125.0
margin_bottom = -97.5
value = 100.0
texture_under = ExtResource( 30 )
texture_progress = ExtResource( 29 )
nine_patch_stretch = true

[node name="PlayerBar2" type="TextureRect" parent="PlayerBar"]
pause_mode = 2
margin_left = -162.5
margin_top = -100.0
margin_right = -85.5
margin_bottom = -60.0
texture = ExtResource( 70 )

[node name="LVL" type="Label" parent="PlayerBar"]
pause_mode = 2
margin_left = -178.0
margin_top = -92.0
margin_right = -85.0002
margin_bottom = -61.0
rect_scale = Vector2( 0.1, 0.1 )
rect_pivot_offset = Vector2( 46.5, 0 )
custom_fonts/font = SubResource( 33 )
text = "LVL. 1"
align = 1
valign = 1

[node name="Coins" type="Label" parent="PlayerBar"]
pause_mode = 2
margin_left = -172.0
margin_top = -86.8
margin_right = 16.0
margin_bottom = 14.2
rect_scale = Vector2( 0.1, 0.1 )
rect_pivot_offset = Vector2( 46.5, 0 )
custom_fonts/font = SubResource( 35 )
text = "0"
valign = 1

[node name="Timer" type="Control" parent="."]
margin_left = -20.0
margin_top = -280.0
margin_right = 20.0
margin_bottom = -240.0
rect_scale = Vector2( 4, 4 )
rect_pivot_offset = Vector2( 20, 0 )

[node name="Timer_Label" type="Label" parent="Timer"]
margin_left = -26.5
margin_top = 10.75
margin_right = 66.5
margin_bottom = 32.75
rect_scale = Vector2( 0.4, 0.4 )
rect_pivot_offset = Vector2( 46.5, 0 )
custom_fonts/font = SubResource( 31 )
text = "00:00"
align = 1
valign = 1

[connection signal="body_entered" from="HitArea" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="AreaofDetection" to="." method="_on_AreaofDetection_body_entered"]
